[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameHUDRelated/BuySellPanel/BuySellBackground.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/BuySellPanel/AdditionalIcons/LevelUpIcon_Orange_20x20.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/BuySellPanel/ButtonAssets/RerollShopButton_Highlighted.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/BuySellPanel/GoldPic.png" type="Texture" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://GameHUDRelated/BuySellPanel/BuySlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameHUDRelated/BuySellPanel/BuySellLevelRollPanel.gd" type="Script" id=7]
[ext_resource path="res://GameHUDRelated/BuySellPanel/AdditionalIcons/ShopRefreshIcon_20x20.png" type="Texture" id=9]
[ext_resource path="res://GameHUDRelated/BuySellPanel/ButtonAssets/LevelUpButton_Normal.png" type="Texture" id=10]
[ext_resource path="res://GameHUDRelated/BuySellPanel/ButtonAssets/LevelUpButton_Highlighted.png" type="Texture" id=11]
[ext_resource path="res://GameHUDRelated/BuySellPanel/ButtonAssets/RerollShopButton_Normal.png" type="Texture" id=12]
[ext_resource path="res://GameHUDRelated/WholeScreenRelicGeneralStorePanel/RelicGeneralStoreShowButton.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 5 )

[node name="BuySellLevelRollPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/separation = 0

[node name="LevelRerollContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 122.0
margin_bottom = 80.0
rect_min_size = Vector2( 122, 80 )
mouse_filter = 2
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LevelRerollContainer"]
margin_right = 122.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="LevelUpPanel" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer"]
margin_right = 122.0
margin_bottom = 40.0
mouse_filter = 2

[node name="LevelUpButton" type="TextureButton" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel"]
margin_right = 122.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel"]
margin_right = 122.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer"]
margin_right = 33.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_left = 7

[node name="LevelUpTexture" type="TextureRect" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/MarginContainer2"]
margin_left = 7.0
margin_top = 10.0
margin_right = 27.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer"]
margin_left = 33.0
margin_right = 81.0
margin_bottom = 40.0
mouse_filter = 2

[node name="LevelUpLabel" type="Label" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/MarginContainer"]
margin_top = 14.0
margin_right = 48.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level Up"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/HBoxContainer"]
margin_right = 17.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/margin_left = 4

[node name="LevelUpCurrencyIcon" type="TextureRect" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/HBoxContainer/MarginContainer3"]
margin_left = 4.0
margin_top = 13.0
margin_right = 17.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 24.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/margin_right = 0

[node name="LevelUpCostLabel" type="Label" parent="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/HBoxContainer/HBoxContainer/MarginContainer2"]
margin_top = 13.0
margin_right = 7.0
margin_bottom = 27.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="RerollPanel" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer"]
margin_top = 40.0
margin_right = 122.0
margin_bottom = 80.0
mouse_filter = 2

[node name="RerollButton" type="TextureButton" parent="HBoxContainer/LevelRerollContainer/RerollPanel"]
margin_right = 122.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel"]
margin_right = 122.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2"]
margin_right = 33.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_left = 7

[node name="RerollTexture" type="TextureRect" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/MarginContainer2"]
margin_left = 7.0
margin_top = 10.0
margin_right = 27.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2"]
margin_left = 33.0
margin_right = 81.0
margin_bottom = 40.0
mouse_filter = 2

[node name="RerollLabel" type="Label" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/MarginContainer"]
margin_top = 14.0
margin_right = 48.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = " Reroll "

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/HBoxContainer"]
margin_right = 17.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/margin_left = 4

[node name="RerollCurrencyIcon" type="TextureRect" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/HBoxContainer/MarginContainer3"]
margin_left = 4.0
margin_top = 13.0
margin_right = 17.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/HBoxContainer"]
margin_left = 17.0
margin_right = 24.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10

[node name="RerollCostLabel" type="Label" parent="HBoxContainer/LevelRerollContainer/RerollPanel/HBoxContainer2/HBoxContainer/MarginContainer2"]
margin_top = 13.0
margin_right = 7.0
margin_bottom = 27.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="BuySlotContainer" type="Control" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 122.0
margin_bottom = 80.0
mouse_filter = 2

[node name="BuySlot01" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_right = 104.0
margin_bottom = 80.0

[node name="BuySlot02" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_left = 104.0
margin_right = 208.0
margin_bottom = 80.0

[node name="BuySlot03" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_left = 208.0
margin_right = 312.0
margin_bottom = 80.0

[node name="BuySlot04" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_left = 312.0
margin_right = 416.0
margin_bottom = 80.0

[node name="BuySlot05" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_left = 416.0
margin_right = 520.0
margin_bottom = 80.0

[node name="BuySlot06" parent="HBoxContainer/BuySlotContainer" instance=ExtResource( 6 )]
margin_left = 520.0
margin_right = 624.0
margin_bottom = 80.0

[node name="RelicGeneralStoreShowButton" parent="." instance=ExtResource( 13 )]
margin_left = 671.0
margin_right = 751.0
margin_bottom = 80.0
size_flags_horizontal = 10

[connection signal="pressed" from="HBoxContainer/LevelRerollContainer/HBoxContainer/LevelUpPanel/LevelUpButton" to="." method="_on_LevelUpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LevelRerollContainer/RerollPanel/RerollButton" to="." method="_on_RerollButton_pressed"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot01" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot01" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot02" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot02" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot03" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot03" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot04" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot04" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot05" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot05" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="tower_bought" from="HBoxContainer/BuySlotContainer/BuySlot06" to="." method="_on_tower_bought"]
[connection signal="viewing_tower_description_tooltip" from="HBoxContainer/BuySlotContainer/BuySlot06" to="." method="_on_viewing_tower_description_tooltip"]
[connection signal="released_mouse_event" from="RelicGeneralStoreShowButton" to="." method="_on_RelicGeneralStoreShowButton_released_mouse_event"]
